--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   "dependencies": {
     "@next/font": "^14.2.15",
     "@radix-ui/react-accordion": "^1.2.1",
+    "@tailwindcss/forms": "^0.5.9",
+    "@tanstack/react-query": "^5.60.5",
+    "@types/eventsource": "^1.1.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "eventsource-parser": "^3.0.0",
     "lucide-react": "^0.460.0",
+    "nanoid": "^5.0.8",
     "next": "^15.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-textarea-autosize": "^8.5.5",
-    "tailwind-merge": "^2.5.4"
+    "tailwind-merge": "^2.5.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
