--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@tailwindcss/forms": "^0.5.9",
     "@tanstack/react-query": "^5.60.5",
     "@types/eventsource": "^1.1.15",
+    "@upstash/ratelimit": "^2.0.4",
+    "@upstash/redis": "^1.34.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "eventsource-parser": "^3.0.0",
@@ -22,6 +24,7 @@
     "next": "^15.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-textarea-autosize": "^8.5.5",
     "tailwind-merge": "^2.5.4",
     "zod": "^3.23.8"
